--- a/src/main/resources/templates/book/createOrUpdateBookForm.html
+++ b/src/main/resources/templates/book/createOrUpdateBookForm.html
@@ -1,57 +1,113 @@
 <!DOCTYPE html>
-<html>
-<style>
-    input[type=text], select {
-        width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-    input[type=submit] {
-        width: 100%;
-        background-color: #4CAF50;
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
+        input[type=text], select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: vertical;
+        }
 
-    input[type=submit]:hover {
-        background-color: #45a049;
-    }
+        label {
+            padding: 12px 12px 12px 0;
+            display: inline-block;
+        }
 
-    div {
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 20px;
-    }
-</style>
+        input[type=submit] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        .col-25 {
+            float: left;
+            width: 25%;
+            margin-top: 6px;
+        }
+
+        .col-75 {
+            float: left;
+            width: 75%;
+            margin-top: 6px;
+        }
+
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+        @media screen and (max-width: 600px) {
+            .col-25, .col-75, input[type=submit] {
+                width: 100%;
+                margin-top: 0;
+            }
+        }
+    </style>
+</head>
 <body>
 
-<h3>Using CSS to style an HTML Form</h3>
+<h2>Add Book</h2>
 
-<div>
-    <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-        <label for="country">Country</label>
-        <select id="country" name="country">
-            <option value="australia">Australia</option>
-            <option value="canada">Canada</option>
-            <option value="usa">USA</option>
-        </select>
-
-        <input type="submit" value="Submit">
+<div class="container">
+    <form th:object="${book}" th:action="@{book/saveOrUpdate/}" method="post">
+        <div class="row">
+            <div class="col-25">
+                <label >Book Name</label>
+            </div>
+            <div class="col-75">
+                <input type="text" th:field="*{name}"  placeholder="Book name..">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label>Author's Last Name</label>
+            </div>
+            <div class="col-75">
+                <input type="text" th:field="*{authorLastName}" placeholder="Author's last name..">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label >Publisher</label>
+            </div>
+            <div class="col-75">
+                <input type="text"  th:field="*{publisher}" placeholder="Publisher's name..">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label >Description</label>
+            </div>
+            <div class="col-75">
+                <textarea  th:field="*{description}" placeholder="Write something.." style="height:200px"></textarea>
+            </div>
+        </div>
+        <div class="row">
+            <input type="submit" value="Submit">
+        </div>
     </form>
 </div>
 
