--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
 
 <ul>
     <li><a class="active" th:href="@{/}" method="get">Home</a></li>
-    <li><a th:href="@{books}" method="get">Books</a></li>
+    <li><a th:href="@{book}" method="get">Books</a></li>
     <li><a href="#contact">Contact</a></li>
     <li><a href="#about">About</a></li>
 </ul>
