--- a/src/main/resources/templates/book/createOrUpdateBookForm.html
+++ b/src/main/resources/templates/book/createOrUpdateBookForm.html
@@ -72,37 +72,66 @@
 <h2>Add Book</h2>
 
 <div class="container">
-    <form th:object="${book}" th:action="@{book/saveOrUpdate/}" method="post">
+    <form th:object="${book}" th:action="@{/book/saveOrUpdate/}" method="post">
+        <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+            <p>Please Correct Errors Below</p>
+        </div>
         <div class="row">
             <div class="col-25">
-                <label >Book Name</label>
+                <label>Book Name</label>
             </div>
-            <div class="col-75">
-                <input type="text" th:field="*{name}"  placeholder="Book name..">
+            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('name')}
+               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                <input type="text" class="form-control" th:field="*{name}" th:errorclass="has-error"
+                       placeholder="put Book's name here.."/>
+                <span class="help-block" th:if="${#fields.hasErrors('name')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
+                    </ul>
+                </span>
             </div>
         </div>
         <div class="row">
             <div class="col-25">
-                <label>Author's Last Name</label>
+                <label>Author's Last Names</label>
             </div>
-            <div class="col-75">
-                <input type="text" th:field="*{authorLastName}" placeholder="Author's last name..">
+            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('authorLastName')}
+               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                <input type="text" class="form-control" th:field="*{authorLastName}" th:errorclass="has-error"
+                       placeholder="put authors last names here, separate them with comma.."/>
+                <span class="help-block" th:if="${#fields.hasErrors('authorLastName')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('authorLastName')}" th:text="${err}"/>
+                    </ul>
+                </span>
             </div>
         </div>
         <div class="row">
             <div class="col-25">
-                <label >Publisher</label>
+                <label>Publisher's Name</label>
             </div>
-            <div class="col-75">
-                <input type="text"  th:field="*{publisher}" placeholder="Publisher's name..">
+            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('publisher')}
+               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                <input type="text" class="form-control" th:field="*{publisher}" th:errorclass="has-error"
+                       placeholder="name goes here.."/>
+                <span class="help-block" th:if="${#fields.hasErrors('publisher')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('publisher')}" th:text="${err}"/>
+                    </ul>
+                </span>
             </div>
         </div>
         <div class="row">
-            <div class="col-25">
-                <label >Description</label>
-            </div>
-            <div class="col-75">
-                <textarea  th:field="*{description}" placeholder="Write something.." style="height:200px"></textarea>
+            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('description')}
+               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                <label> Description:</label>
+                <textarea th:field="*{description}" placeholder="Write description.." style="height:200px"
+                          th:errorclass="has-error"></textarea>
+                <span class="help-block" th:if="${#fields.hasErrors('description')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+                    </ul>
+                </span>
             </div>
         </div>
         <div class="row">
@@ -113,3 +142,4 @@
 
 </body>
 </html>
+
