--- a/src/main/resources/templates/book/show.html
+++ b/src/main/resources/templates/book/show.html
@@ -108,11 +108,11 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-11 ">
-                                <h1 class="panel-title">History of borrowings</h1>
+                                <h1 class="panel-title">Comments</h1>
                             </div>
                             <div class="col-md-1">
                                 <a class="btn btn-default" href="#"
-                                   th:href="@{'/book/' + ${book.id} + '/borrowings'}" role="button">View</a>
+                                   th:href="@{'/book/' + ${book.id} + '/comments'}" role="button">Show</a>
                             </div>
                         </div>
                     </div>
@@ -120,16 +120,22 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <ul>
-                                    <li th:remove="all">borrowing one</li>
-                                    <li th:remove="all">borrowing two</li>
+                                    <li th:remove="all">comment one</li>
+                                    <li th:remove="all">comment two</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <a class="button"
-                       th:href="@{'/book/' + ${book.id} + '/update'}" role="button">Edit</a>
+                <div class="row">
+                    <div class="col-md-3">
+                        <a class="button"
+                           th:href="@{'/book/' + ${book.id} + '/update'}" role="button">Edit</a>
+                    </div>
+                    <div class="col-md-3">
+                        <a class="button"
+                           th:href="@{'/book/' + ${book.id} + '/delete'}" role="button">Delete</a>
+                    </div>
                 </div>
             </div>
         </div>
