--- a/src/main/resources/templates/book/comment/createOrUpdateCommentForm.html
+++ b/src/main/resources/templates/book/comment/createOrUpdateCommentForm.html
@@ -1,10 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
 </head>
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    input[type=text], select, textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        resize: vertical;
+    }
+
+    label {
+        padding: 12px 12px 12px 0;
+        display: inline-block;
+    }
+
+    input[type=submit] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        float: right;
+    }
+
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+
+    .container {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+
+    .col-25 {
+        float: left;
+        width: 25%;
+        margin-top: 6px;
+    }
+
+    .col-75 {
+        float: left;
+        width: 75%;
+        margin-top: 6px;
+    }
+
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 600px) {
+        .col-25, .col-75, input[type=submit] {
+            width: 100%;
+            margin-top: 0;
+        }
+    }
+</style>
 <body>
+
+<h2>Comment this Book</h2>
+
+<div class="container">
+    <form th:object="${comment}" th:action="@{'/book/' +${comment.getOwningBooksId()}+'/comment/saveOrUpdate'}" method="post">
+
+        <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+            <p>Please Correct Errors Below</p>
+        </div>
+        <div class="row">
+            <div class="col-25">
+                <label>Your Name</label>
+            </div>
+            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('user')}
+               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                <input type="text" class="form-control" th:field="*{user}" th:errorclass="has-error"
+                       placeholder="your name.."/>
+                <span class="help-block" th:if="${#fields.hasErrors('user')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('user')}" th:text="${err}"/>
+                    </ul>
+                </span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('content')}
+               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                <label> Description:</label>
+                <textarea th:field="*{content}" placeholder="Write your comment.." style="height:200px"
+                          th:errorclass="has-error"></textarea>
+                <span class="help-block" th:if="${#fields.hasErrors('content')}">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('content')}" th:text="${err}"/>
+                    </ul>
+                </span>
+            </div>
+        </div>
+        <div class="row">
+            <input type="submit" value="Submit">
+        </div>
+    </form>
+</div>
 
 </body>
 </html>
+
