--- a/src/main/resources/templates/book/createOrUpdateBookForm.html
+++ b/src/main/resources/templates/book/createOrUpdateBookForm.html
@@ -1,145 +1,163 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-</head>
-<style>
-    * {
-        box-sizing: border-box;
-    }
+    <meta charset="UTF-8"/>
+    <title>Recipe Form</title>
 
-    input[type=text], select, textarea {
-        width: 100%;
-        padding: 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        resize: vertical;
-    }
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
 
-    label {
-        padding: 12px 12px 12px 0;
-        display: inline-block;
-    }
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 
-    input[type=submit] {
-        background-color: #4CAF50;
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        float: right;
-    }
-
-    input[type=submit]:hover {
-        background-color: #45a049;
-    }
-
-    .container {
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 20px;
-    }
-
-    .col-25 {
-        float: left;
-        width: 25%;
-        margin-top: 6px;
-    }
-
-    .col-75 {
-        float: left;
-        width: 75%;
-        margin-top: 6px;
-    }
-
-    /* Clear floats after the columns */
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-
-    /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-    @media screen and (max-width: 600px) {
-        .col-25, .col-75, input[type=submit] {
-            width: 100%;
-            margin-top: 0;
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+    <style>
+        * {
+            box-sizing: border-box;
         }
-    }
-</style>
+
+        input[type=text], select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: vertical;
+        }
+
+        label {
+            padding: 12px 12px 12px 0;
+            display: inline-block;
+        }
+
+        input[type=submit] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        .col-25 {
+            float: left;
+            width: 25%;
+            margin-top: 6px;
+        }
+
+        .col-75 {
+            float: left;
+            width: 75%;
+            margin-top: 6px;
+        }
+
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+        @media screen and (max-width: 600px) {
+            .col-25, .col-75, input[type=submit] {
+                width: 100%;
+                margin-top: 0;
+            }
+        }
+    </style>
+</head>
 <body>
 
 <h2>Add Book</h2>
 
-<div class="container">
-    <form th:object="${book}" th:action="@{/book/saveOrUpdate/}" method="post">
-        <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
-            <p>Please Correct Errors Below</p>
-        </div>
-        <div class="row">
-            <div class="col-25">
-                <label>Book Name</label>
-            </div>
-            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('name')}
-               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
-                <input type="text" class="form-control" th:field="*{name}" th:errorclass="has-error"
-                       placeholder="put Book's name here.."/>
-                <span class="help-block" th:if="${#fields.hasErrors('name')}">
+<div class="container-fluid" style="margin-top: 20px">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <form th:object="${book}" th:action="@{/book/saveOrUpdate/}" method="post">
+                <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                    <p>Please Correct Errors Below</p>
+                </div>
+                <input type="hidden" th:field="${book.id}"/>
+                <div class="row">
+                    <div class="col-25">
+                        <label>Book Name</label>
+                    </div>
+                    <div class="col-md-3 form-group" th:class="${#fields.hasErrors('name')}
+                    ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                        <input type="text" class="form-control" th:field="*{name}" th:errorclass="has-error"
+                               placeholder="put Book's name here.."/>
+                        <span class="help-block" th:if="${#fields.hasErrors('name')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
                     </ul>
                 </span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-25">
-                <label>Author's Last Names</label>
-            </div>
-            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('authorLastName')}
-               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
-                <input type="text" class="form-control" th:field="*{authorLastName}" th:errorclass="has-error"
-                       placeholder="put authors last names here, separate them with comma.."/>
-                <span class="help-block" th:if="${#fields.hasErrors('authorLastName')}">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label>Author's Last Names</label>
+                    </div>
+                    <div class="col-md-3 form-group" th:class="${#fields.hasErrors('authorLastName')}
+                    ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                        <input type="text" class="form-control" th:field="*{authorLastName}" th:errorclass="has-error"
+                               placeholder="put authors last names here, separate them with comma.."/>
+                        <span class="help-block" th:if="${#fields.hasErrors('authorLastName')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('authorLastName')}" th:text="${err}"/>
                     </ul>
                 </span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-25">
-                <label>Publisher's Name</label>
-            </div>
-            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('publisher')}
-               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
-                <input type="text" class="form-control" th:field="*{publisher}" th:errorclass="has-error"
-                       placeholder="name goes here.."/>
-                <span class="help-block" th:if="${#fields.hasErrors('publisher')}">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label>Publisher's Name</label>
+                    </div>
+                    <div class="col-md-3 form-group" th:class="${#fields.hasErrors('publisher')}
+                    ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                        <input type="text" class="form-control" th:field="*{publisher}" th:errorclass="has-error"
+                               placeholder="name goes here.."/>
+                        <span class="help-block" th:if="${#fields.hasErrors('publisher')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('publisher')}" th:text="${err}"/>
                     </ul>
                 </span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 form-group" th:class="${#fields.hasErrors('description')}
-               ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
-                <label> Description:</label>
-                <textarea th:field="*{description}" placeholder="Write description.." style="height:200px"
-                          th:errorclass="has-error"></textarea>
-                <span class="help-block" th:if="${#fields.hasErrors('description')}">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 form-group" th:class="${#fields.hasErrors('description')}
+                    ? 'col-md-3 form-group has-error' : 'col-md-3 form-group'">
+                        <label> Description:</label>
+                        <textarea th:field="*{description}" placeholder="Write description.." style="height:200px"
+                                  th:errorclass="has-error"></textarea>
+                        <span class="help-block" th:if="${#fields.hasErrors('description')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
                     </ul>
                 </span>
-            </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
         </div>
-        <div class="row">
-            <input type="submit" value="Submit">
-        </div>
-    </form>
+    </div>
 </div>
-
 </body>
 </html>
 
