--- a/src/main/resources/templates/book/comment/createOrUpdateCommentForm.html
+++ b/src/main/resources/templates/book/comment/createOrUpdateCommentForm.html
@@ -73,10 +73,10 @@
 
 <div class="container">
     <form th:object="${comment}" th:action="@{'/book/' +${comment.getOwningBooksId()}+'/comment/saveOrUpdate'}" method="post">
-
         <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
             <p>Please Correct Errors Below</p>
         </div>
+        <input type="hidden" th:field="*{id}"/>
         <div class="row">
             <div class="col-25">
                 <label>Your Name</label>
