added setting and displaying images to book

--- a/src/main/resources/templates/book/show.html
+++ b/src/main/resources/templates/book/show.html
@@ -65,7 +65,7 @@
                             </div>
                             <div class="col-md-6">
                                 <img
-                                        th:src="@{'/book/' + ${book.id} + '/book_image'}" th:method="get"
+                                        th:src="@{'/book/' + ${book.id} + '/getImage'}" th:method="get"
                                         width="400" height="200">
                             </div>
                         </div>
